Fixed resize issue on mobile

--- a/styles/01. Navbar/Navbar.module.scss
+++ b/styles/01. Navbar/Navbar.module.scss
@@ -13,6 +13,9 @@ $column: 740px;
   @media screen and (max-width: 1260px) {
     position: absolute;
   }
+  @media screen and (max-width: 430) {
+    position: absolute;
+  }
 }
 
 .navComputer {
