--- a/styles/02. Index/03. Cloud Computing/CloudComputing.module.scss
+++ b/styles/02. Index/03. Cloud Computing/CloudComputing.module.scss
@@ -47,6 +47,9 @@ $macbook: 1400px;
   width: 480px;
   font-size: 20px;
   font-weight: lighter;
+  @media screen and (max-width: $column) {
+    width: 90%;
+  }
 }
 
 .desc2 {
@@ -54,6 +57,9 @@ $macbook: 1400px;
   width: 500px;
   font-size: 20px;
   font-weight: lighter;
+  @media screen and (max-width: $column) {
+    width: 90%;
+  }
 }
 
 .text {
