--- a/styles/Global/global.scss
+++ b/styles/Global/global.scss
@@ -1,7 +1,10 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
   font-family: "WorkSans-Medium", "Helvetica", "sans-serif";
   background-color: #f9fafe;
+  border-right: 1px solid red;
+  overflow: auto;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
